[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
          --cov leetcode
          --isort
          --yapf
python_files = tests/*
mock_use_standalone_module = true

[isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = leetcode

[yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = pep8
coalesce_brackets = true
dedent_closing_brackets = true
